<resources>
    <string name="app_name">Project1</string>
    <string name="activity_back_button_text">Back</string>
    <string name="activity_template_for_list_background_text">Удалить</string>
    <string name="fragment_add_item_button_text">Сохранить</string>
    <string name="activity_template_for_list_item_content">Content</string>
    <string name="activity_template_for_list_item_title">Title</string>
    <string name="activity_template_for_list_item_link">Link</string>
    <string name="facebook_app_id">198809697623744</string>
    <string name="fb_login_protocol_scheme">fb198809697623744</string>
    <string name="fragment_add_item_content_hint">Content</string>
    <string name="fragment_add_item_link_hint">Link</string>
    <string name="fragment_add_item_title_hint">Title</string>
    <string name="item_template_for_list_swipe_menu_edit">Редактировать</string>
    <string name="item_template_for_list_swipe_menu_delete">Удалить</string>
    <string name="activity_main_icon_of_profile_content_description">Profile\'s icon</string>
    <string name="fragment_profile_facebook_profile_photo">Facebook profile photo</string>
    <string name="item_template_for_list_item_title_tools_text">Title</string>
</resources>
