<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragments.AddItemFragment">

    <EditText
        android:id="@+id/addItemTitle"
        android:layout_width="@dimen/fragment_add_item_edit_text_width"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_add_item_title_hint"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addItemContent"
        android:layout_width="@dimen/fragment_add_item_edit_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/fragment_add_item_content_hint"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addItemTitle" />

    <EditText
        android:id="@+id/addItemLink"
        android:layout_width="@dimen/fragment_add_item_edit_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/fragment_add_item_link_hint"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addItemContent"
        app:layout_constraintVertical_bias="0.032" />

    <Button
        android:id="@+id/buttonAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="356dp"
        android:text="@string/fragment_add_item_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>